--- a/client/src/shared/Content.css
+++ b/client/src/shared/Content.css
@@ -2,6 +2,7 @@
   margin-left: 15rem;
   display: grid;
   justify-content: center;
+  margin-top: 80px;
 }
 .video_content_container {
   max-width: 1600px;
