--- a/client/src/shared/bar/sideBarItem.css
+++ b/client/src/shared/bar/sideBarItem.css
@@ -1,8 +1,12 @@
 .sidebar_item:hover {
-  background: rgb(200, 193, 193) !important;
+  background: rgb(230, 228, 228) !important;
+  cursor: pointer;
 }
 .sidebar_item span i.icon {
   margin-right: 20px;
+}
+.highlight_menu {
+  background: rgb(200, 193, 193) !important;
 }
 .highlight_menu span {
   font-weight: bold;
