--- a/newclient/src/components/header/index.scss
+++ b/newclient/src/components/header/index.scss
@@ -23,6 +23,49 @@
     }
   }
 
+  .searchInput {
+    display: flex;
+    justify-content: space-around;
+    width: 30rem;
+    text-align: center;
+    padding-top: 0.8rem;
+
+    input {
+      background: transparent;
+      color: white;
+      border: none;
+      font-weight: 500;
+      padding: 0;
+      width: 80%;
+      height: 6vh;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .buttonSearch {
+      background: transparent;
+      color: #b1bdb4;
+
+      width: 2rem;
+      height: 5vh;
+      width: 15%;
+      border: none;
+      margin-top: 0.2rem;
+
+      &:focus {
+        border: none;
+        outline: none;
+      }
+
+      .imageSearch {
+        width: 100%;
+        height: 2rem;
+      }
+    }
+  }
+
   .items {
     display: flex;
     flex-direction: row;
