--- a/newclient/src/components/header/index.scss
+++ b/newclient/src/components/header/index.scss
@@ -1,13 +1,13 @@
 @import "../../constants/style.constant.scss";
 
 .header {
-  background: rgba(29, 28, 28, 0.466);
   width: 100%;
   min-width: 100%;
   height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background: rgba(29, 28, 28, 0.466);
 
   .logo {
     display: flex;
@@ -25,44 +25,21 @@
 
   .searchInput {
     display: flex;
-    justify-content: space-around;
-    width: 30rem;
-    text-align: center;
-    padding-top: 0.8rem;
+    padding: 0;
+    width: 20rem;
 
     input {
       background: transparent;
-      color: white;
+      width: 20rem;
       border: none;
-      font-weight: 500;
-      padding: 0;
-      width: 80%;
-      height: 6vh;
-
-      &:focus {
-        outline: none;
-      }
+      outline: none;
+      color: whitesmoke;
     }
-
     .buttonSearch {
       background: transparent;
-      color: #b1bdb4;
-
-      width: 2rem;
-      height: 5vh;
-      width: 15%;
+      color: whitesmoke;
       border: none;
-      margin-top: 0.2rem;
-
-      &:focus {
-        border: none;
-        outline: none;
-      }
-
-      .imageSearch {
-        width: 100%;
-        height: 2rem;
-      }
+      outline: none;
     }
   }
 
@@ -96,11 +73,48 @@
 
 @media (max-width: $breackPoint-medium) {
   .header {
+    height: 7vh;
+    .logo {
+      .menu {
+        width: 2rem;
+        height: 3vh;
+      }
+    }
+
+    .searchInput {
+      width: 10rem;
+
+      input {
+        width: 100%;
+      }
+      .buttonSearch {
+        display: none;
+      }
+    }
+
     .items {
+      .list {
+        li {
+          .itemIcon {
+            width: 2rem;
+            height: 3vh;
+          }
+        }
+      }
       .userImage {
         border-radius: 2rem;
-        width: 3.5rem;
+        width: 2rem;
         margin: 0.5rem 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: $breackPoint-small) {
+  .header {
+    .items {
+      .list {
+        display: none;
       }
     }
   }
