--- a/newclient/src/components/header/index.scss
+++ b/newclient/src/components/header/index.scss
@@ -81,8 +81,8 @@
     height: 7vh;
     .logo {
       .menu {
-        width: 2rem;
-        height: 3vh;
+        width: 3.5rem;
+        height: 4.5vh;
       }
     }
 
@@ -117,6 +117,12 @@
 
 @media (max-width: $breackPoint-small) {
   .header {
+    .logo {
+      .menu {
+        width: 63px;
+        height: 3.5vh;
+      }
+    }
     .items {
       .list {
         display: none;
