--- a/newclient/src/components/sidebar/index.scss
+++ b/newclient/src/components/sidebar/index.scss
@@ -22,6 +22,9 @@
       }
 
       span {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         margin: 0.5rem;
       }
 
