refactor: field email and password
use field to validate

--- a/client/src/user/views/login.scss
+++ b/client/src/user/views/login.scss
@@ -25,7 +25,8 @@
       transition: 0.5s;
       color: white;
 
-      &[type="text"] {
+      &[type="text"],
+      &[type="password"] {
         &:focus,
         &:hover {
           border-radius: 1rem;
