--- a/client/src/user/views/register.scss
+++ b/client/src/user/views/register.scss
@@ -75,6 +75,16 @@
       width: 60%;
       input {
         width: 100%;
+        &[type="text"],
+        &[type="password"],
+        &[type="email"],
+        &[type="submit"] {
+          width: 100%;
+          &:focus,
+          &:hover {
+            width: 100%;
+          }
+        }
       }
     }
   }
@@ -85,6 +95,16 @@
     &_form {
       input {
         width: 100%;
+        &[type="text"],
+        &[type="password"],
+        &[type="email"],
+        &[type="submit"] {
+          width: 100%;
+          &:focus,
+          &:hover {
+            width: 100%;
+          }
+        }
       }
     }
   }
