feat: add animation to show sidebar

--- a/client/src/common/header/header.scss
+++ b/client/src/common/header/header.scss
@@ -78,6 +78,11 @@
       visibility: visible;
       margin-top: 5rem;
     }
+
+    .userImage:active ~ .user_button {
+      visibility: visible;
+      margin-top: 5rem;
+    }
   }
 }
 
